[gd_scene load_steps=6 format=3 uid="uid://qpdxv4l38x5a"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_7uqta"]
[ext_resource type="FontFile" uid="uid://c2dwlq7c5n6nb" path="res://fonts/Space_Mono/SpaceMono-Regular.ttf" id="2_prhcq"]
[ext_resource type="Script" path="res://scripts/energy_bar.gd" id="2_wdaxr"]

[sub_resource type="Gradient" id="Gradient_772o6"]
offsets = PackedFloat32Array(0, 0.541738, 1)
colors = PackedColorArray(0, 0.984314, 0, 1, 0.739162, 0.75426, 0.276269, 1, 0.585, 0.126265, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fgd6r"]
gradient = SubResource("Gradient_772o6")
width = 40
height = 180
fill_to = Vector2(0, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_7uqta")

[node name="DistanceLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 794.0
offset_top = 20.0
offset_right = 1015.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("2_prhcq")
theme_override_font_sizes/font_size = 20
text = "Distance: 0000"
horizontal_alignment = 2

[node name="BestDistanceLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 20.0
offset_right = 160.0
offset_bottom = 54.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_prhcq")
theme_override_font_sizes/font_size = 20
text = "Highscore: 0000"
horizontal_alignment = 2

[node name="EnergyBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_right = 59.0
offset_bottom = 578.0
size_flags_horizontal = 0
script = ExtResource("2_wdaxr")

[node name="Outline" type="Polygon2D" parent="EnergyBar"]
position = Vector2(-20, -5)
scale = Vector2(1.15, 1.02)
polygon = PackedVector2Array(38, 145, 38, 159, 24, 159, 22, 346, 68, 346, 68, 159, 53, 159, 52.88, 145)

[node name="Background" type="Polygon2D" parent="EnergyBar"]
position = Vector2(-12.88, 0.199997)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(38, 145, 38, 159, 24, 159, 22, 346, 68, 346, 68, 159, 53, 159, 52.88, 145)

[node name="ProgressBar" type="TextureProgressBar" parent="EnergyBar"]
layout_mode = 0
offset_left = 13.12
offset_top = 163.2
offset_right = 77.12
offset_bottom = 525.2
max_value = 1.0
step = 0.001
value = 1.0
fill_mode = 3
texture_progress = SubResource("GradientTexture2D_fgd6r")

[node name="Title" type="Label" parent="EnergyBar"]
layout_mode = 0
offset_left = 7.0
offset_top = 111.0
offset_right = 58.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("2_prhcq")
text = "Power"
horizontal_alignment = 1

[node name="ValueLabel" type="Label" parent="EnergyBar"]
layout_mode = 0
offset_left = 9.0
offset_top = 350.0
offset_right = 57.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("2_prhcq")
text = "100%"
horizontal_alignment = 1

[node name="OutlineFlashTimer" type="Timer" parent="EnergyBar"]
wait_time = 0.15

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
offset_left = 1.0
offset_right = 1031.0
offset_bottom = 581.0
color = Color(0.384229, 0.384229, 0.384229, 0.729412)

[node name="Label" type="Label" parent="GameOverScreen"]
layout_mode = 0
offset_left = 2.0
offset_top = 70.0
offset_right = 1025.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_prhcq")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverScreen"]
layout_mode = 0
offset_left = 334.0
offset_top = 261.0
offset_right = 690.0
offset_bottom = 321.0
theme_override_fonts/font = ExtResource("2_prhcq")
theme_override_font_sizes/font_size = 24
text = "Play again"

[node name="ScoreResultLabel" type="Label" parent="GameOverScreen"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_top = 388.0
offset_right = 1026.0
offset_bottom = 535.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_prhcq")
theme_override_font_sizes/font_size = 38
text = "Your Score: 10000.23m (Global Top 20%)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GetHighscoresReqest" type="HTTPRequest" parent="."]

[node name="PostHighscoresRequest" type="HTTPRequest" parent="GetHighscoresReqest"]

[connection signal="timeout" from="EnergyBar/OutlineFlashTimer" to="EnergyBar" method="_on_outline_flash_timer_timeout"]
[connection signal="button_down" from="GameOverScreen/RetryButton" to="." method="_on_retry_button_button_down"]
[connection signal="request_completed" from="GetHighscoresReqest" to="." method="_on_get_highscores_reqest_request_completed"]
[connection signal="request_completed" from="GetHighscoresReqest/PostHighscoresRequest" to="." method="_on_post_highscores_request_request_completed"]
